fix bg btn alignment

--- a/src/sass/editables/editable-bg.scss
+++ b/src/sass/editables/editable-bg.scss
@@ -19,7 +19,7 @@
     width: 1.4em;
     height: 1.4em;
     border-radius: 100%;
-    padding: .2em;
+    padding: .13em;
     background: rgba(250, 250, 250, .8);
   }
 }
